Fixed spacing of profile iamges

--- a/largescreen.css
+++ b/largescreen.css
@@ -208,7 +208,7 @@
     border-left: var(--yellow) solid 5px;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
     box-shadow: 0px 1px 5px gray;
 }
 
@@ -252,7 +252,7 @@
     border-left: #be123c solid 5px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .announcements-title {
@@ -276,8 +276,14 @@
     gap: 10px;
 }
 
+.full-profile>img {
+    height: 3rem;
+    width: 3rem;
+}
+
 .at-name {
     font-weight: bold;
+    margin-top: 5px;
     margin-bottom: 5px;
 }
 
